--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,22 @@
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Jackson for JSON (core + annotations + databind) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.17.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.17.2</version>
+        </dependency>
 
 
     </dependencies>
