--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>test</scope>
+        </dependency>
         <!-- Jackson for JSON (core + annotations + databind) -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
